# ProfileManager_Imgui

./: CMakeLists.txt  README.md  fieldsclass.cpp  fieldsclass.h  imgui.ini  main.cpp  profiledata.cpp  profiledata.h  profilewindow.cpp  profilewindow.h
profiles/OS视窗/郭冬临/: candidate.info
profiles/OS视窗/郭德纲/: candidate.info
profiles/OS视窗/郭麒麟/: candidate.info
